[package]
name = "mnemosyne"
version = "0.1.0"
authors = ["Cyrix126 <cyrix126@baermail.fr>"]
edition = "2021"

[dependencies]
confy = "0.6"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = {version="0.7", default-features= false, features= ["tokio", "http2"] }
tokio = {version="1", default-features=false, features= ["rt-multi-thread", "sync"] }
reqwest = {version="0.12", default-features=false, features=["rustls-tls", "http2"]}
