[package]
name = "mnemosyne"
version = "0.1.0"
authors = ["Cyrix126 <cyrix126@baermail.fr>"]
edition = "2021"

[dependencies]
confy = "0.6"
serde = { version = "1", features = ["derive"]}
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = {version="0.7", default-features= false, features= ["tokio", "http2", "macros"] }
tokio = {version="1", default-features=false, features= ["rt-multi-thread", "sync", "macros"] }
reqwest = {version="0.12", default-features=false, features=["rustls-tls", "http2"]}
url = {version="2.5", features=["serde"]}
moka = {version="0.12", features=["future"]}
ahash = "0.8"
uuid = {version="1.8", features=["v4", "fast-rng"]}
nohash = "0.2"
derive_more = {version="0.99", default-features=false, features=["deref", "deref_mut"]}
enclose = "1.2"
typesize = "0.1"
[dev-dependencies]
axum-test = "15.2"
